--- a/styles.css
+++ b/styles.css
@@ -32,6 +32,13 @@
   ::before {
     box-sizing: border-box
   }
+
+  video {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 10px;
+}
   
   html {
     line-height: 1.15;
