Tried Video Controls

--- a/styles.css
+++ b/styles.css
@@ -33,6 +33,49 @@
     box-sizing: border-box
   }
 
+
+
+
+
+/* WILL TRY BLOB EFFECT */
+  /* @keyframes rotate {
+    from {
+        rotate: 0deg;
+    }
+
+    50% {
+        rotate: 360deg;
+        border-radius: 50%;
+    }
+
+    to {
+        rotate: 0deg;
+    }
+}
+
+
+#blob {
+    translate: 270% 430%;
+    z-index: 2;
+    position: absolute;
+    border-radius: 0px;
+    animation: rotate 15s ease-in infinite;
+
+
+
+}
+
+@media (max-width:576px) {
+    #blob {
+        display: none;
+    }
+} */
+
+
+
+
+
+
   video {
     width: 100%;
     height: 100%;
