--- a/styles.css
+++ b/styles.css
@@ -173,8 +173,14 @@
   }
   
   
+  .mt-2 {
+    margin-top: 1rem !important
+  }
   .mt-3 {
     margin-top: 1.5rem !important
+  }
+  .mb-2 {
+    margin-bottom: 1rem !important
   }
   .mb-3 {
     margin-bottom: 1.5rem !important
