--- a/public/pens/PaddleGameJS/style.css
+++ b/public/pens/PaddleGameJS/style.css
@@ -3,17 +3,17 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  height: 100vh;
   background-color: #f0f0f0;
 }
 
 #game-container {
   position: relative;
-  width: 800px;
-  height: 600px;
+  margin-top: 1%;
+  width: 95%;
+  height: 90vh;
   background-color: #333;
   overflow: hidden;
-  border: 2px solid #000;
+  border: 5px groove #000;
 }
 
 #score-container {
